--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,13 @@
+@font-face {
+  font-family: "m";
+  src: url('./fonts/SuisseIntl-Book.8593fb66.woff2') format('woff');
+  font-weight: 100;
+  font-style: normal;
+  font-display: swap;
+}
+
+$primary-font: 'm';
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +15,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #80808061;
+  font-family: $primary-font;
+  color: rgb(69, 69, 69);
 }
 
 code {
